[package]
name = "pagefeed"
version = "0.3.4"
authors = ["Peter De Wachter <pdewacht@gmail.com>"]
license = "GPL-2.0+"
publish = false
edition = "2018"

[dependencies]
chrono = "^0.4"
fastcgi = "^1.0.0"
htmlescape = "^0.3.1"
postgres = { version = "^0.19.1", features = ["with-uuid-0_8", "with-chrono-0_4"] }
quick-xml = { version = "^0.20.0", features = ["serialize"] }
regex = "^1.1.2"
reqwest = { version = "^0.11.3", features = ["blocking"] }
rss = "^1.1"
serde = { version ="^1.0.130", features = ["derive"] }
tiny-keccak = { version = "^2.0", features = ["sha3"] }
uuid = { version = "^0.8", features = ["v4"] }
