[package]
name = "pagefeed"
version = "0.3.4"
authors = ["Peter De Wachter <pdewacht@gmail.com>"]
license = "GPL-2.0+"
publish = false
edition = "2018"

[dependencies]
chrono = "^0.4"
fastcgi = "^1.0.0"
htmlescape = "^0.3.1"
postgres = { version = "^0.19.1", features = ["with-uuid-1", "with-chrono-0_4"] }
quick-xml = { version = "^0.30.0", features = ["serialize"] }
regex = "^1.1.2"
reqwest = { version = "^0.11.3", default-features = false, features = ["blocking", "rustls-tls"] }
rss = "^2.0"
serde = { version ="^1.0.130", features = ["derive"] }
tiny-keccak = { version = "^2.0", features = ["sha3"] }
uuid = { version = "^1.0", features = ["v4"] }
