[package]
name = "pagefeed"
version = "0.5.0"
edition = "2021"
publish = false

[dependencies]
atomicwrites = "0.3.1"

reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

rss = "2.0"
maud = "0.25"
uuid = { version = "1.1.2", features = ["v5"] }

toml = "0.8.2"
serde = { version ="1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde-human-readable", "serde-well-known"] }
humantime-serde = "1.1.1"

scraper = "0.17.1"

serde_json = "1.0.97"
jaq-core = "1.0.0"
jaq-interpret = "1.0.0"
jaq-parse = "1.0.0"
jaq-std = "1.0.0"
